style: fixed alignment about me

--- a/sass/about-me.scss
+++ b/sass/about-me.scss
@@ -38,7 +38,7 @@
 		background: rgba(255, 255, 255, .5);
 		border-radius: 10px;
 		font-size: 80%;
-		margin-left: 20%;
+		margin-left: 18%;
 		padding: 2% 2% 5% 2%;
 		width: 60%;
 		margin-top: 5%;
@@ -90,4 +90,5 @@
 }
 .about-me footer{
 	font-size: 70%;
+
 }
