--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -45,6 +45,13 @@ a {
 /*
 	Backbutton
 */
+.backlink {
+	height: 100%;
+	width: 8%;
+	margin-right: 92%;
+	margin-top: 2%;
+	margin-left:5%;
+}
 .backbutton {
 	height: 100%;
 	width: 100%;
